force-app/main/default/objects/Account/fields/Account_Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Integration_Source__c</fullName>
    <defaultValue>&quot;Salesforce&quot;</defaultValue>
    <description>This field will be used to capture the integration source whenever Account record is created/updated from Form Assembly or Workato.</description>
    <inlineHelpText>This field will be used to capture the integration source whenever Account record is created/updated from Form Assembly or Workato.</inlineHelpText>
    <label>Account Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>