force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>This is the ability to classify the types of organizations.
It identifies if this account is a true client or if the account is a possible prospect that we have contacted but not established a firm relationship with.
Options are:
Business Client - a business we are working with.
Business Prospect - a business or investment we are trying to work with.
Service Provider - a business that we purchase goods or services from.
Partner - an organization that we work with.</description>
    <inlineHelpText>It identifies if this account is a true client or if the account is a possible prospect that we have contacted but not established a firm relationship with.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Client</fullName>
                <default>true</default>
                <label>Business Client</label>
            </value>
            <value>
                <fullName>Business Prospect</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>