force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>This defines if an Account is Active or Inactive. If an Account is Inactive then it is not activated so the downstream activities cannot be created off the Account</description>
    <inlineHelpText>This defines if an Account is Active or Inactive. If an Account is Inactive then it is not activated so the downstream activities cannot be created off the Account</inlineHelpText>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>