force-app/main/default/objects/Account/fields/Address_Description__c.field-meta.xml
<CustomField>
    <fullName>Address_Description__c</fullName>
    <label>Address Description</label>
    <type>TextArea</type>
</CustomField>