force-app/main/default/objects/Account/fields/Attention_Care_of__c.field-meta.xml
<CustomField>
    <fullName>Attention_Care_of__c</fullName>
    <label>Attention / Care of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>