force-app/main/default/objects/Account/fields/Automated_Account_Creation__c.field-meta.xml
<CustomField>
    <fullName>Automated_Account_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be used to identify the Account that are created manually in salesforce or coming through some other integrated app and based on that duplicate rule will handle the records.</description>
    <label>Automated Account Creation</label>
    <type>Checkbox</type>
</CustomField>