force-app/main/default/objects/Account/fields/BIA_Wards__c.field-meta.xml
<CustomField>
    <fullName>BIA_Wards__c</fullName>
    <label>BIA Wards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Michael Ford</fullName>
            </value>
            <value>
                <fullName>2 - Stephen Holyday</fullName>
            </value>
            <value>
                <fullName>3 - Mark Grimes</fullName>
            </value>
            <value>
                <fullName>4 - Gord Perks</fullName>
            </value>
            <value>
                <fullName>5 - Frances Nunziata</fullName>
            </value>
            <value>
                <fullName>6 - James Pasternak</fullName>
            </value>
            <value>
                <fullName>7 - Anthony Perruzza</fullName>
            </value>
            <value>
                <fullName>8 - Mike Colle</fullName>
            </value>
            <value>
                <fullName>9 - Ana Bailão</fullName>
            </value>
            <value>
                <fullName>10 - Joe Cressy</fullName>
            </value>
            <value>
                <fullName>11 - Mike Layton</fullName>
            </value>
            <value>
                <fullName>12 - Josh Matlow</fullName>
            </value>
            <value>
                <fullName>13 - Kristyn Wong-Tam</fullName>
            </value>
            <value>
                <fullName>14 - Paula Fletcher</fullName>
            </value>
            <value>
                <fullName>15 - Jaye Robinson</fullName>
            </value>
            <value>
                <fullName>16 - Denzil Minnan-Wong</fullName>
            </value>
            <value>
                <fullName>17 - Shelley Carroll</fullName>
            </value>
            <value>
                <fullName>18 - John Filion</fullName>
            </value>
            <value>
                <fullName>19 - Brad Bradford</fullName>
            </value>
            <value>
                <fullName>20 - Gary Crawford</fullName>
            </value>
            <value>
                <fullName>21 - Michael Thompson</fullName>
            </value>
            <value>
                <fullName>22 - Jim Karygiannis</fullName>
            </value>
            <value>
                <fullName>23 - Cynthia Lai</fullName>
            </value>
            <value>
                <fullName>24 - Paul Ainslie</fullName>
            </value>
            <value>
                <fullName>25 - Jennifer McKelvie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>