force-app/main/default/objects/Account/fields/Billing_street_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_street_Number__c</fullName>
    <label>Billing street Number</label>
    <length>70</length>
    <type>Text</type>
</CustomField>