force-app/main/default/objects/Account/fields/Board_Size__c.field-meta.xml
<CustomField>
    <fullName>Board_Size__c</fullName>
    <description>Count of Councillors is included in Board Size</description>
    <inlineHelpText>Count of Councillors is included in Board Size</inlineHelpText>
    <label>Board Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>