force-app/main/default/objects/Account/fields/Board_Size_Formula__c.field-meta.xml
<CustomField>
    <fullName>Board_Size_Formula__c</fullName>
    <formula>Councillors__c  +  Vacancies__c +  Standing_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Size Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>