force-app/main/default/objects/Account/fields/Boundary_Map__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Map__c</fullName>
    <label>Boundary Map</label>
    <type>Url</type>
</CustomField>