force-app/main/default/objects/Account/fields/Business_ID_Number_Corp_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_ID_Number_Corp_Number__c</fullName>
    <label>Business ID Number / Corp Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>