force-app/main/default/objects/Account/fields/Business_Subsector__c.field-meta.xml
<CustomField>
    <fullName>Business_Subsector__c</fullName>
    <description>This is a breakdown of the sector into key sub-components of related types of goods or services.</description>
    <inlineHelpText>This is a breakdown of the sector into key sub-components of related types of goods or services.</inlineHelpText>
    <label>Business Subsector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Sectors__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation Services</fullName>
            </value>
            <value>
                <fullName>Accounting, tax preparation, bookkeeping and payroll services</fullName>
            </value>
            <value>
                <fullName>Advertising, public relations, and related services</fullName>
            </value>
            <value>
                <fullName>Air transportation</fullName>
            </value>
            <value>
                <fullName>Amusement, gambling and recreational activities</fullName>
            </value>
            <value>
                <fullName>Animal food</fullName>
            </value>
            <value>
                <fullName>Architectural, engineering and related services</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Bakeries</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Deposit Taking Institutions</fullName>
            </value>
            <value>
                <fullName>Beverage manufacturing</fullName>
            </value>
            <value>
                <fullName>Bioproducts</fullName>
            </value>
            <value>
                <fullName>Building material and garden equipment and supplies dealers</fullName>
            </value>
            <value>
                <fullName>Business schools and computer management training</fullName>
            </value>
            <value>
                <fullName>Citizenship</fullName>
            </value>
            <value>
                <fullName>Clean Energy</fullName>
            </value>
            <value>
                <fullName>Clothing and clothing accessories stores</fullName>
            </value>
            <value>
                <fullName>Clothing manufacturing</fullName>
            </value>
            <value>
                <fullName>Communications equipment manufacturing</fullName>
            </value>
            <value>
                <fullName>Community colleges and CEGEP</fullName>
            </value>
            <value>
                <fullName>Computer and electronic product manufacturing</fullName>
            </value>
            <value>
                <fullName>Computer design (and related services)</fullName>
            </value>
            <value>
                <fullName>Computer systems design and related services</fullName>
            </value>
            <value>
                <fullName>Construction of buildings</fullName>
            </value>
            <value>
                <fullName>Couriers and messengers</fullName>
            </value>
            <value>
                <fullName>Dairy products</fullName>
            </value>
            <value>
                <fullName>Deodorants, personal, manufacturing</fullName>
            </value>
            <value>
                <fullName>Dyes, hair, manufacturing</fullName>
            </value>
            <value>
                <fullName>Educational support services</fullName>
            </value>
            <value>
                <fullName>Electronic equipment manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>