force-app/main/default/objects/Account/fields/City_of_Toronto_Ward__c.field-meta.xml
<CustomField>
    <fullName>City_of_Toronto_Ward__c</fullName>
    <description>This is the Ward that the Company is located.</description>
    <label>City of Toronto Ward (Account Ward)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
                <isActive>false</isActive>
                <label>26</label>
            </value>
            <value>
                <fullName>27</fullName>
                <isActive>false</isActive>
                <label>27</label>
            </value>
            <value>
                <fullName>28</fullName>
                <isActive>false</isActive>
                <label>28</label>
            </value>
            <value>
                <fullName>29</fullName>
                <isActive>false</isActive>
                <label>29</label>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>