force-app/main/default/objects/Account/fields/City_of_Toronto_Ward_Map__c.field-meta.xml
<CustomField>
    <fullName>City_of_Toronto_Ward_Map__c</fullName>
    <formula>if(NOT(ISBLANK(TEXT(City_of_Toronto_Ward__c))),
HYPERLINK(&#39;https://www.toronto.ca/city-government/data-research-maps/neighbourhoods-communities/ward-profiles/ward-profiles-ward-&#39;+ TEXT(City_of_Toronto_Ward__c), &#39;Ward Address&#39;),if(NOT(ISBLANK(TEXT(City_of_Toronto_Ward_Number__c))),
HYPERLINK(&#39;https://www.toronto.ca/city-government/data-research-maps/neighbourhoods-communities/ward-profiles/ward-&#39;+ TEXT(City_of_Toronto_Ward_Number__c), &#39;Ward Address&#39;),
(HYPERLINK(&#39;https://www.toronto.ca/city-government/data-research-maps/neighbourhoods-communities/ward-profiles&#39;, &#39;Ward Address&#39;))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City of Toronto Ward Map</label>
    <type>Text</type>
</CustomField>