force-app/main/default/objects/Account/fields/City_of_Toronto_Ward_Number__c.field-meta.xml
<CustomField>
    <fullName>City_of_Toronto_Ward_Number__c</fullName>
    <description>This is the Ward that the Company is located.</description>
    <inlineHelpText>This is the Ward that the Company is located.</inlineHelpText>
    <label>City of Toronto Ward</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Etobicoke North</fullName>
            </value>
            <value>
                <fullName>2 Etobicoke Centre</fullName>
            </value>
            <value>
                <fullName>3 Etobicoke-Lakeshore</fullName>
            </value>
            <value>
                <fullName>4 Parkdale-High Park</fullName>
            </value>
            <value>
                <fullName>5 York South-Weston</fullName>
            </value>
            <value>
                <fullName>6 York Centre</fullName>
            </value>
            <value>
                <fullName>7 Humber River-Black Creek</fullName>
            </value>
            <value>
                <fullName>8 Eglinton-Lawrence</fullName>
            </value>
            <value>
                <fullName>9 Davenport</fullName>
            </value>
            <value>
                <fullName>10 Spadina-Fort York</fullName>
            </value>
            <value>
                <fullName>11 University-Rosedale</fullName>
            </value>
            <value>
                <fullName>12 Toronto-St. Paul’s</fullName>
            </value>
            <value>
                <fullName>13 Toronto Centre</fullName>
            </value>
            <value>
                <fullName>14 Toronto-Danforth</fullName>
            </value>
            <value>
                <fullName>15 Don Valley West</fullName>
            </value>
            <value>
                <fullName>16 Don Valley East</fullName>
            </value>
            <value>
                <fullName>17 Don Valley North</fullName>
            </value>
            <value>
                <fullName>18 Willowdale</fullName>
            </value>
            <value>
                <fullName>19 Beaches-East York</fullName>
            </value>
            <value>
                <fullName>20 Scarborough Southwest</fullName>
            </value>
            <value>
                <fullName>21 Scarborough Centre</fullName>
            </value>
            <value>
                <fullName>22 Scarborough-Agincourt</fullName>
            </value>
            <value>
                <fullName>23 Scarborough North</fullName>
            </value>
            <value>
                <fullName>24 Scarborough-Guildwood</fullName>
            </value>
            <value>
                <fullName>25 Scarborough-Rouge Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>