force-app/main/default/objects/Account/fields/CloudingoAgent__BALA__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BALA__c</fullName>
    <label>Billing Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>