force-app/main/default/objects/Account/fields/CloudingoAgent__BALO__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BALO__c</fullName>
    <label>Billing Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>