force-app/main/default/objects/Account/fields/CloudingoAgent__BCD__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BCD__c</fullName>
    <label>Billing Congressional District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>