force-app/main/default/objects/Account/fields/CloudingoAgent__BRT__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__BRT__c</fullName>
    <label>Billing Address Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>