force-app/main/default/objects/Account/fields/CloudingoAgent__SALA__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__SALA__c</fullName>
    <label>Shipping Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>