force-app/main/default/objects/Account/fields/CloudingoAgent__SALO__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__SALO__c</fullName>
    <label>Shipping Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>