force-app/main/default/objects/Account/fields/CloudingoAgent__SCD__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__SCD__c</fullName>
    <label>Shipping Congressional District</label>
    <length>2</length>
    <type>Text</type>
</CustomField>