force-app/main/default/objects/Account/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Organizes firms into their supply chains. The full supply chain includes all elements of the generation of products and services including resource extraction through to the final delivery/installation and can include ongoing maintenance and operations. This allows the Salesforce owner of the account to identify if the account (organization) is in a supply chain of a specific segment of the sectors. Its helps to identify synergies and where there may be opportunities to support growth.</description>
    <label>Cluster</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospc-Aircraft Modifications /Conversions</fullName>
            </value>
            <value>
                <fullName>Aerospc-Aircraft Structural Assemblies</fullName>
            </value>
            <value>
                <fullName>Aerospc-Aircraft Systems</fullName>
            </value>
            <value>
                <fullName>Aerospc-Airport/Airport Services</fullName>
            </value>
            <value>
                <fullName>Aerospc-Avionics</fullName>
            </value>
            <value>
                <fullName>Aerospc-Communications Equipment</fullName>
            </value>
            <value>
                <fullName>Aerospc-Consulting Services</fullName>
            </value>
            <value>
                <fullName>Aerospc-Electronics</fullName>
            </value>
            <value>
                <fullName>Aerospc-Engineering</fullName>
            </value>
            <value>
                <fullName>Aerospc-Industry Association/Organizations</fullName>
            </value>
            <value>
                <fullName>Aerospc-Interior finishing</fullName>
            </value>
            <value>
                <fullName>Aerospc-Landing Gear</fullName>
            </value>
            <value>
                <fullName>Aerospc-Machining</fullName>
            </value>
            <value>
                <fullName>Aerospc-Maintenance Repair &amp; Overhaul</fullName>
            </value>
            <value>
                <fullName>Aerospc-Metal coating</fullName>
            </value>
            <value>
                <fullName>Aerospc-Navigation Systems</fullName>
            </value>
            <value>
                <fullName>Aerospc-Non for Profit</fullName>
            </value>
            <value>
                <fullName>Aerospc-Paint products</fullName>
            </value>
            <value>
                <fullName>Aerospc-Raw materials</fullName>
            </value>
            <value>
                <fullName>Aerospc-Satellites</fullName>
            </value>
            <value>
                <fullName>Aerospc-Simulation/Flight Training</fullName>
            </value>
            <value>
                <fullName>Aerospc-Space Exploration</fullName>
            </value>
            <value>
                <fullName>Aerospc-Space Guidance Systems</fullName>
            </value>
            <value>
                <fullName>Aerospc-Space Launch Vehicles</fullName>
            </value>
            <value>
                <fullName>Aerospc-Space Systems</fullName>
            </value>
            <value>
                <fullName>Aerospc-Specialized Business Services (Banking, Accounting Legal etc.)</fullName>
            </value>
            <value>
                <fullName>Aerospc-Specialized Research Service Providers</fullName>
            </value>
            <value>
                <fullName>Aerospc-Specialized Risk Capital (VC Firms, Angel Networks)</fullName>
            </value>
            <value>
                <fullName>Aerospc-Special Processing &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Auto-Auto Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>